Reorg sending metrics page

--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -1,11 +1,18 @@
 ---
-title: Sending operation metrics to GraphOS
+title: Sending metrics to GraphOS
+description: Learn how to report operation and field usage metrics to GraphOS
 ---
 
-> Reporting metrics from a [monograph](../graphs/#monographs), [self-hosted supergraph](../graphs/#self-hosted-supergraphs), or [Apollo Server](/apollo-server/) requires an [enterprise plan](../org/plans/).
-> If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
+GraphOS Studio offers visualizations of metrics like request rate, latency, and more to help you analyze your supergraph's performance. Studio also lets you analyze how individual fields in your GraphQL requests are being used by clients. To analyze operation metrics and field usage in Studio, you first need to report them to GraphOS.
 
-## From the Apollo Router or Apollo Server
+> Reporting metrics from a [monograph](../graphs/#monographs), [Apollo Server](/apollo-server/), or a [self-hosted supergraph](../graphs/#self-hosted-supergraphs) requires an [Enterprise plan](../org/plans/).
+> If your organization doesn't currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
+
+## Reporting operation metrics
+
+How you report operation metrics to GraphOS depends on whether you're [using Apollo Router or Apollo Server](#from-the-apollo-router-or-apollo-server) or whether you're [using a third-party server](#from-a-third-party-server-advanced).
+
+### From the Apollo Router or Apollo Server
 
 Both the Apollo Router and Apollo Server use the same mechanism to enable operation metrics reporting to GraphOS:
 
@@ -26,34 +33,34 @@ Both the Apollo Router and Apollo Server use the same mechanism to enable operat
 
 > Consult your production environment's documentation to learn how to set its environment variables.
 
-Now when your router/server starts up, it automatically begins reporting operation metrics to GraphOS.
+Now when your router or server starts up, it automatically begins reporting operation metrics to GraphOS.
 
-## Adding support to a third-party server (advanced)
+### From a third-party server (advanced)
 
 You can set up a reporting agent in your GraphQL server to push metrics to GraphOS. The agent is responsible for:
 
 - Translating operation details into the correct [reporting format](#reporting-format)
 - Implementing a default **signature function** to identify each executed operation
-- Emitting batches of traces and statistics to the GraphOS reporting endpoint
+- Emitting batches of traces and metrics to the GraphOS reporting endpoint
 - Optionally defining plugins to enable advanced reporting features
 
 Apollo Server defines its agent for performing these tasks in [the usage reporting plugin](https://github.com/apollographql/apollo-server/blob/main/packages/server/src/plugin/usageReporting).
 
 > If you're interested in collaborating with Apollo on creating a dedicated integration for your GraphQL server, please get in touch with us at **support@apollographql.com**.
 
-### Reporting format
+#### Reporting format
 
-The GraphOS reporting endpoint accepts batches of traces and statistics that are encoded in **protocol buffer** format. Each trace corresponds to the execution of a single GraphQL operation, including a breakdown of the timing and error information for each field that's resolved as part of the operation.
+The GraphOS reporting endpoint accepts batches of traces and metrics that are encoded in **protocol buffer** format. Each trace corresponds to the execution of a single GraphQL operation, including a breakdown of the timing and error information for each field that's resolved as part of the operation.
 
 The schema for this protocol buffer is defined as the `Report` message in [the protobuf schema](https://usage-reporting.api.apollographql.com/proto/reports.proto).
 
-> This document describes how to create a report whose `tracesPerQuery` objects consist solely of a list of detailed execution traces in the `trace` array. GraphOS now allows your server to describe usage as a mix of detailed execution traces and pre-aggregated statistics (released in Apollo Server 2.24), which leads to much more efficient reports. This document does not yet describe how to generate these statistics. It also does not describe how to support the "referencing operations" feature of [the Insights page](./field-usage/). We strongly encourage developers to contact Apollo support at **support@apollographql.com** to discuss their use case prior to building their own reporting agent using this module.
+> This document describes how to create a report whose `tracesPerQuery` objects consist solely of a list of detailed execution traces in the `trace` array. GraphOS now allows your server to describe usage as a mix of detailed execution traces and pre-aggregated metrics (released in Apollo Server 2.24), which leads to much more efficient reports. This document does not yet describe how to generate these metrics. It also does not describe how to support the "referencing operations" feature of [the Insights page](./field-usage/). We strongly encourage developers to contact Apollo support at **support@apollographql.com** to discuss their use case prior to building their own reporting agent using this module.
 
 As a starting point, we recommend implementing an extension to the GraphQL execution that creates a report with a single trace, as defined in the `Trace` message of [the protobuf schema](https://usage-reporting.api.apollographql.com/proto/reports.proto). Then, you can batch multiple traces into a single report. We recommend sending batches approximately every 20 seconds, and limiting each batch to a reasonable size (~4MB).
 
 > Many server runtimes already support emitting tracing information as a [GraphQL extension](https://github.com/apollographql/apollo-tracing). Such extensions are available for [Node](/apollo-server/api/plugin/usage-reporting/), [Ruby](https://github.com/uniiverse/apollo-tracing-ruby), [Scala](https://github.com/sangria-graphql/sangria-slowlog#apollo-tracing-extension), [Java](https://github.com/graphql-java/graphql-java/pull/577), [Elixir](https://github.com/sikanhe/apollo-tracing-elixir), and [.NET](https://graphql-dotnet.github.io/docs/getting-started/metrics/). If you're working on adding metrics reporting functionality for one of these languages, reading through that tracing instrumentation is a good place to start. For other languages, we recommend consulting the [Apollo Server usage reporting plugin](/apollo-server/api/plugin/usage-reporting).
 
-### Operation signing
+#### Operation signing
 
 For Apollo Studio to correctly group GraphQL queries, your reporting agent should define a function to generate a **query signature** for each distinct query. This can be challenging, because two _structurally_ different queries can be _functionally_ equivalent. For instance, all of the following queries request the same information:
 
@@ -93,7 +100,7 @@ It's important to decide how to group such queries when tracking metrics. The [T
 
 We recommend using the same default signature method for consistency across different server runtimes.
 
-### Sending metrics to the reporting endpoint
+#### Sending metrics to the reporting endpoint
 
 After your GraphQL server prepares a batch of traces, it should send them to the Studio reporting endpoint at the following URL:
 
@@ -123,7 +130,7 @@ For a reference implementation, see the `sendReport()` function in the [TypeScri
 
 We recommend implementing retries with backoff when you encounter `5xx` responses or networking errors when communicating with the reporting endpoint. Additionally, implement a shutdown hook to make sure you push all pending reports before your server initiates a healthy shutdown.
 
-### Implementing additional reporting features
+#### Implementing additional reporting features
 
 The reference TypeScript implementation includes several features that you might want to include in your implementation. All of these features are implemented in the usage reporting plugin itself, and are documented [the plugin's API reference](/apollo-server/api/plugin/usage-reporting/).
 
@@ -131,35 +138,32 @@ For example, you can restrict which information is sent to GraphOS, particularly
 
 ## Reporting field usage
 
-Your GraphQL server can report metrics for requests, (field) executions or both.
+Your GraphQL router or server can report one or both of following field usage metrics:
 
-### Prerequisites
+- **Requests**: How many times an operation that requests a particular field has been observed
+- **Field executions**: How many times the resolver for a particular field has been executed
 
-> ⚠️ Before continuing, make sure you've configured your router or individual GraphQL server to [push metrics to GraphOS](./sending-operation-metrics/).
+How you report these metrics to GraphOS depends on whether you're using the [Apollo Router](#from-the-apollo-router) or [Apollo Server](#from-apollo-server).
 
-To report each type of field usage metric to GraphOS, make sure your graph meets the prerequisites for that metric:
+### From the Apollo Router
 
-#### Requests
+If you have a [cloud](/graphos/graphs#cloud-supergraphs) or [self-hosted supergraph](/graphos/graphs#self-hosted-supergraphs), you only need to configure your [router](/federation/building-supergraphs/router/) to [send operation metrics to GraphOS](#from-the-apollo-router-or-apollo-server), and field usage will be automatically reported. Subgraphs should _not_ send any metrics to GraphOS directly. Instead, they can include [trace data](./operations#enabling-traces) in their responses to the router. The router then includes that data in its own reports to GraphOS.
 
-To report metrics for the operations requesting fields, your GraphQL server must run Apollo Server 3.6 or later.
+### From Apollo Server
 
-If you have a [federated graph](/federation), your _gateway_ must run Apollo Server 3.6 or later, but there are no requirements for your subgraphs.
+Apollo Server automatically reports field usage metrics as long as you follow these prerequisites:
 
-#### Executions
+- You must first configure your server to [send operation metrics to GraphOS](#from-the-apollo-router-or-apollo-server).
+- To report requests:
 
-To report metrics for field executions, your GraphQL server can run any recent version of Apollo Server 2.x or 3.x.
+  - Your GraphQL server must run Apollo Server 3.6 or later.
+  - If you have a [federated graph](/federation), your _gateway_ must run Apollo Server 3.6 or later, but there are no requirements for your subgraphs.
 
-If you have a [federated graph](https://apollographql.com/docs/federation), your subgraphs must support federated tracing. For compatible libraries, see the `FEDERATED TRACING` entry for libraries in [this table](/federation/building-supergraphs/supported-subgraphs/).
+- To report field executions:
+  - Your GraphQL server can run any recent version of Apollo Server 2.x or 3.x.
+  - If you have a [federated graph](/federation), your subgraphs must support federated tracing. For compatible libraries, see the `FEDERATED TRACING` entry for libraries in [this table](/federation/building-supergraphs/supported-subgraphs/).
 
-> If _some_ of your subgraphs support federated tracing and others _don't_, only executions in compatible subgraphs are reported to Apollo.
-
-### Reporting with a supergraph
-
-If you have a self-hosted supergraph, you only need to configure your [router](/federation/building-supergraphs/router/) to [send metrics to GraphOS](./sending-operation-metrics/). Subgraphs should _not_ send any metrics to GraphOS directly. Instead, they can include trace data in their responses to the router. The router then includes that data in its own reports to GraphOS.
-
-### Performance considerations
-
-Calculating execution metrics can affect performance for large queries or high-traffic graphs. This is especially true for [federated graphs](https://apollographql.com/docs/federation), because a subgraph includes each operation's full trace data in its response to the gateway.
+> If some of your subgraphs support federated tracing and others don't, only executions in compatible subgraphs are reported to Apollo.
 
 #### Disabling execution metrics
 
@@ -169,9 +173,9 @@ Disabling field-level instrumentation for a particular request has the following
 
 - The request does not contribute to the "executions" statistic on the Insights page in Studio.
 - The request does not contribute to field-level execution timing hints that can be displayed in the Explorer and in VS Code.
-- The request does not produce a trace that can be viewed in the Traces section of the Operations page in Studio.
+- The request does not produce a trace that can be viewed in the [Traces section](/operations#resolver-level-traces) of the Insights page in Studio.
 
-These requests _do_ still contribute to most features of Studio, such as schema checks, the Operations page, and the "requests" statistic on the Insights page.
+These requests _do_ still contribute to most features of Studio, such as schema checks, the Insights page, and the "Request" metrics on the Insights page.
 
 To disable field-level instrumentation for _all_ requests, pass `() => false` as the `fieldLevelInstrumentation` option:
 
@@ -186,7 +190,7 @@ new ApolloServer({
 });
 ```
 
-If you do this, execution statistics do not appear on the Insights page.
+If you do this, execution metrics do not appear on the Insights page.
 
 #### Fractional sampling
 
@@ -216,3 +220,7 @@ For example, if you pass `0.01`, your server enables field-level execution for a
 You can decide whether to enable field-level instrumentation (and what the weight should be) on a per-operation basis by passing a function as the value of `fieldLevelInstrumentation`.
 
 For example, you might want to enable field-level instrumentation more often for rare operations and less often for common operations. For details, see the [usage reporting plugin docs](https://apollographql.com/docs/apollo-server/api/plugin/usage-reporting/#fieldlevelinstrumentation).
+
+### Performance considerations
+
+Calculating execution metrics can affect performance for large queries or high-traffic graphs. This is especially true for [federated graphs](/federation), because a subgraph includes each operation's full trace data in its response to the gateway.
