--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -7,9 +7,7 @@ GraphOS Studio offers a performant and intuitive UI to help you monitor and unde
 
 ## Metrics collection and forwarding
 
-To visualize operation metrics in GraphOS Studio, you first need to report them to GraphOS. If you have a [cloud supergraph](../quickstart/cloud), its router automatically reports operation metrics. If you have a [self-hosted supergraph](../quickstart/self-hosted), you need to [connect your router to GraphOS](./sending-operation-metrics) to report metrics.
-
-Apollo also offers a [Datadog integration](./datadog-integration) to forward your graph's performance metrics to your Datadog account.
+To visualize operation metrics in GraphOS Studio, you first need to report them to GraphOS. If you have a [cloud supergraph](../quickstart/cloud), its router automatically reports operation metrics. If you have a [self-hosted supergraph](../quickstart/self-hosted), you need to [connect your router to GraphOS](./sending-operation-metrics) to report metrics. Apollo also offers a [Datadog integration](./datadog-integration) to forward your graph's performance metrics to your Datadog account.
 
 > Connecting a self-hosted router to GraphOS and forwarding metrics to Datadog are only available for [Enterprise plans](https://www.apollographql.com/pricing/).
 
