--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -136,7 +136,7 @@ The reference TypeScript implementation includes several features that you might
 
 For example, you can restrict which information is sent to GraphOS, particularly to avoid reporting personal data. Because personal data most commonly appears in variables and headers, the TypeScript agent offers options to `sendVariablesValues` and `sendHeaders`.
 
-## Reporting field usage
+## Reporting field usage metrics
 
 Your GraphQL router or server can report one or both of following field usage metrics:
 
