Use Enterprise component

--- a/src/content/graphos/metrics/datadog-integration.mdx
+++ b/src/content/graphos/metrics/datadog-integration.mdx
@@ -3,7 +3,7 @@ title: Forwarding metrics to Datadog
 description: For enterprise graphs
 ---
 
-> ⚠️ **Datadog forwarding is available only for [Enterprise plans](https://www.apollographql.com/pricing/).** It is not available for cloud supergraphs.
+<GraphOSEnterpriseRequired />
 
 The **Apollo Datadog integration** enables you to forward your enterprise graph's performance metrics to your Datadog account. Datadog supports an advanced function API, which enables you to create sophisticated visualizations and alerts for GraphQL metrics.
 
@@ -57,7 +57,7 @@ To integrate with Datadog, you provide your Datadog API key and region to Studio
      width="600"
    />
 
-    > If you don't see a Datadog Forwarding section on this page, the feature isn't available as part of your organization's plan. Datadog forwarding requires an Enterprise plan.
+   > If you don't see a Datadog Forwarding section on this page, the feature isn't available as part of your organization's plan. Datadog forwarding requires an Enterprise plan.
 
 5. In the Datadog Forwarding section, click **Configure**. Provide your API key and region, then click **Enable**.
 
