--- a/src/content/graphos/metrics/notifications/build-status-notification.mdx
+++ b/src/content/graphos/metrics/notifications/build-status-notification.mdx
@@ -2,7 +2,7 @@
 title: Build status notifications (preview)
 ---
 
-> Build status notifications require an [Enterprise plan](https://www.apollographql.com/pricing/). They are currently in preview.
+<GraphOSEnterpriseRequired />
 
 You can [configure GraphOS](./notification-setup) to notify your team via webhook whenever GraphOS attempts to build a new supergraph schema for your [federated graph](/federation/). The notification indicates whether the build succeeded and provides a temporary URL to the new supergraph schema if so.
 
@@ -30,7 +30,7 @@ interface Location {
 }
 
 interface ResponseShape {
-  eventType: "BUILD_PUBLISH_EVENT";
+  eventType: 'BUILD_PUBLISH_EVENT';
   eventID: string;
   supergraphSchemaURL: string | undefined; // See description below
   buildSucceeded: boolean;
