--- a/src/content/shared/graphos-enteprise-required.mdx
+++ b/src/content/shared/graphos-enteprise-required.mdx
@@ -1,6 +1,42 @@
-<blockquote>
+import {Box, Center, Flex, Link, Text, chakra} from '@chakra-ui/react';
+import {TbComponents} from 'react-icons/tb';
 
-**This feature is available only with a [GraphOS Enterprise plan](/graphos/enterprise/).**
-If your organization _doesn't_ currently have an Enterprise plan, you can test this functionality by signing up for a free [Enterprise trial](/graphos/org/plans/#enterprise-trials).
+<Box
+    pl="2"
+    py="1"
+    borderLeftWidth="2px"
+    borderColor="primary"
+    fontSize="md"
+    sx={{
+    '>': {
+        ':not(:last-child)': {
+        mb: 2
+        }
+    }
+    }}
+>
 
-</blockquote>
+<Flex as="span">
+  <chakra.span pl="10px" pr="10px">
+    <Center h="100%">
+      <TbComponents />
+    </Center>
+  </chakra.span>
+  <Text pl="1">
+    <b>
+      This feature is only available with a{' '}
+      <Link color={'primary'} href="/graphos/enterprise/">
+        GraphOS Enterprise plan
+      </Link>
+      .
+    </b>{' '}
+    If your organization doesn't currently have an Enterprise plan, you can test
+    this functionality by signing up for a free{' '}
+    <Link color={'primary'} href="/graphos/org/plans/#enterprise-trials">
+      Enterprise trial
+    </Link>
+    .
+  </Text>
+</Flex>
+
+</Box>
