--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -54,7 +54,7 @@ Beneath each of those metrics, you can also see the individual operations with:
 
 You can click an operation name to view more [detailed information](#operation-details) or scroll down to see overall [operation metrics](#operation-metrics).
 
-You can adjust the overview's timeframe and filter by client in the top right corner.
+You can adjust the overview's timeframe and filter by client in the top right corner or reset the defaults.
 
 <img
   src="../img/operations-overview-filters.jpg"
@@ -255,6 +255,13 @@ You can use the [`@defer`](../operations/defer/) directive to defer returning da
 ## Operation details
 
 When you click an operation name, you open detailed information for that operation in the main insights view. You can use the toggles below the operation name to view the operation's **usage**, **error** metrics, or [**traces**](#resolver-level-traces).
+
+<img
+  src="../img/operation-details.jpg"
+  className="screenshot"
+  alt="The Insights page in GraphOS Studio"
+  width="600"
+/>
 
 The main **Usage** view includes **Client Usage** information and the operation's [**operation signature**](./operation-signatures) and [**query plan**](/federation/query-plans/) as a chart or text, which you can view by clicking **View Operation**.
 
