Use ExperimentalFeature component

--- a/src/content/graphos/metrics/notifications/performance-alerts.mdx
+++ b/src/content/graphos/metrics/notifications/performance-alerts.mdx
@@ -2,11 +2,18 @@
 title: Performance alerts from Apollo Studio
 ---
 
-> Performance alerts require a [paid plan](https://www.apollographql.com/pricing/). They are currently experimental.
+<ExperimentalFeature />
+
+> Performance alerts require a [paid plan](https://www.apollographql.com/pricing/).
 
 GraphOS can notify your team's Slack workspace or Pagerduty instance whenever a particular metric (such as error rate) for a particular GraphQL operation exceeds a defined threshold. This is useful for detecting anomalies, especially following a release.
 
-<img src="../../img/integrations/slack-notification.png" width="500" class="screenshot" alt="Performance alert" />
+<img
+  src="../../img/integrations/slack-notification.png"
+  width="500"
+  className="screenshot"
+  alt="Performance alert"
+/>
 
 ## Supported metrics
 
@@ -26,7 +33,14 @@ Each performance alert you define can apply to either **a specific operation** o
 2. Select the **Reporting** tab.
 3. Find the Performance Alerts card and click **Add a new alert**.
 
-  <img src="../../img/add-new-alert.jpg" class="screenshot" width="500" alt="Add new alert button" />
+{' '}
+
+<img
+  src="../../img/add-new-alert.jpg"
+  className="screenshot"
+  width="500"
+  alt="Add new alert button"
+/>
 
 4. Configure the alert's **Operation Name**, **Trigger**, and **Trigger Value** to suit your needs.
 5. Select a **Channel** to send alerts to. You can select **New Channel** from the dropdown if you haven't yet configured the Slack channel or Pagerduty instance you want to use.
