Add meta descriptions

--- a/src/content/graphos/metrics/datadog-integration.mdx
+++ b/src/content/graphos/metrics/datadog-integration.mdx
@@ -1,6 +1,6 @@
 ---
 title: Forwarding metrics to Datadog
-description: For enterprise graphs
+description: Integrate your supergraph's performance metrics with Datadog
 ---
 
 <GraphOSEnterpriseRequired />
