--- a/src/content/graphos/metrics/notifications/performance-alerts.mdx
+++ b/src/content/graphos/metrics/notifications/performance-alerts.mdx
@@ -1,5 +1,6 @@
 ---
-title: Performance alerts from Apollo Studio
+title: Performance alerts from GraphOS Studio
+description: Receive notifications whenever metrics exceed defined thresholds
 ---
 
 <ExperimentalFeature />
@@ -32,8 +33,6 @@ Each performance alert you define can apply to either **a specific operation** o
 1. Go to your graph's Settings page in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
 2. Select the **Reporting** tab.
 3. Find the Performance Alerts card and click **Add a new alert**.
-
-{' '}
 
 <img
   src="../../img/add-new-alert.jpg"
