--- a/src/content/graphos/metrics/operation-signatures.mdx
+++ b/src/content/graphos/metrics/operation-signatures.mdx
@@ -1,6 +1,6 @@
 ---
 title: Operation signatures
-description: How GraphOS identifies equivalent operations
+description: Understand how GraphOS identifies equivalent operations
 ---
 
 When you're viewing your graph's [operation metrics](#usage-reporting), GraphOS Studio groups together operations based on the exact set of fields they include, _not_ based on operation _names_. This means that operations with the same name but different sets of fields are displayed separately:
