--- a/src/content/graphos/metrics/notifications/build-status-notification.mdx
+++ b/src/content/graphos/metrics/notifications/build-status-notification.mdx
@@ -1,8 +1,11 @@
 ---
-title: Build status notifications (preview)
+title: Build status notifications
+description: Receive webhook alerts whenever GraphOS attempts to build a new supergraph schema
 ---
 
 <GraphOSEnterpriseRequired />
+
+<PreviewFeature />
 
 You can [configure GraphOS](./notification-setup) to notify your team via webhook whenever GraphOS attempts to build a new supergraph schema for your [federated graph](/federation/). The notification indicates whether the build succeeded and provides a temporary URL to the new supergraph schema if so.
 
