Use "GraphOS Studio instead of "Apollo Sutdio"

--- a/src/content/graphos/metrics/datadog-integration.mdx
+++ b/src/content/graphos/metrics/datadog-integration.mdx
@@ -48,7 +48,7 @@ To integrate with Datadog, you provide your Datadog API key and region to Studio
    - If the domain name is `app.datadoghq.com`, then your API region is `US`.
    - If the domain name is `app.datadoghq.eu`, then your API region is `EU`.
 
-4. In Apollo Studio, go to your graph's Settings page, then go to **This Graph > Reporting**:
+4. In GraphOS Studio, go to your graph's Settings page, then go to **This Graph > Reporting**:
 
    <img
      src="../img/datadog/datadog-studio-settings.jpg"
